src/objects/Programa__c.object
<CustomObject>
    <fields>
        <fullName>AbreviaturaPrograma__c</fullName>
        <label>Abreviatura programa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>IdInterno</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Letra__c</fullName>
        <label>Letra</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Programas</relationshipLabel>
        <relationshipName>Programas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NombreMin__c</fullName>
        <label>Nombre min</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Programas</relationshipLabel>
        <relationshipName>Programas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Programa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdInterno__c</columns>
        <columns>NAME</columns>
        <columns>Letra__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Programa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>